# 2g43s

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  debug-build&upload-artifacts.yml
SDL3/: CMakeLists.txt
SDL3/VisualC/SDL_test/: SDL_test.vcxproj
SDL3/include/SDL3/: SDL_atomic.h  SDL_audio.h  SDL_video.h
SDL3/src/audio/: SDL_sysaudio.h
SDL3/src/audio/pipewire/: SDL_pipewire.c
SDL3/src/camera/pipewire/: SDL_camera_pipewire.c
SDL3/src/haptic/: SDL_syshaptic.h
SDL3/src/render/direct3d/: SDL_render_d3d.c
SDL3/src/render/direct3d12/: SDL_render_d3d12.c
SDL3/src/stdlib/: SDL_string.c
SDL3/src/thread/n3ds/: SDL_systhread.c
SDL3/src/thread/windows/: SDL_syssem.c
SDL3/src/video/: SDL_egl.c
SDL3/src/video/wayland/: SDL_waylandevents.c  SDL_waylandvideo.c  SDL_waylandwindow.c
SDL3/src/video/x11/: SDL_x11events.c  SDL_x11window.c
SDL3/test/: testatomic.c  testautomation_audio.c
core/: Engine.cpp  Engine.hpp  Logger.hpp  Tools.hpp  engine.hpp  graphics.hpp  logger.hpp  tools.hpp
core/models/: scene.gltf
core/sep/: debug.hpp  key.hpp  logDevice.hpp  physDevice.hpp  queue.hpp  surface.hpp  swapchain.hpp
core/sep/buffers/: AtomicCounterObject.hpp  ModelBufferObject.hpp  ModelDataBufferObject.hpp  Types.hpp  UniformBufferObject.hpp
core/sep/buffers/culling/: ModelCullingBufferObject.hpp  VisibleIndicesBufferObject.hpp
core/sep/buffers/generic/: DrawCommandsBufferObject.hpp  UniformCullingBufferObject.hpp
core/sep/buffers/main/: AtomicCounterBufferObject.hpp
core/sep/buffers/main/indices/: TextureIndexBufferObject.h  TextureIndexObject.h  TextureIndexOffsetBufferObject.hpp  TextureIndexOffsetObject.hpp
core/sep/buffers/main/uniform/: UniformBufferObject.hpp  UniformCullingBufferObject.hpp  UniformPostprocessingBufferObject.hpp
core/sep/buffers/matrices/: ModelBufferObject.hpp  ModelDataBufferObject.hpp
core/sep/camera/: Camera.h  Camera.hpp
core/sep/control/: KeyBinding.hpp  KeyListener.hpp  MouseListener.hpp
core/sep/controls/: KeyBinding.hpp  KeyListener.hpp
core/sep/device/: LogDevice.hpp  LogicalDevice.hpp  PhysDevice.hpp  PhysicalDevice.hpp
core/sep/entity/: CameraEntity.h  CameraEntity.hpp  Entity.h  Entity.hpp  PlayerEntity.cpp  PlayerEntity.h  entity.h
core/sep/graphics/: Buffers.cpp  Buffers.hpp  BuffersRegistry.cpp  BuffersRegistry.hpp  Command.cpp  Command.hpp  Delta.hpp  DeltaManager.cpp  DeltaManager.hpp  Graphics.hpp
core/sep/graphics/command/: Barrier.cpp  Barrier.h  Command.cpp  Command.hpp
core/sep/graphics/helper/: Helper.cpp  Helper.hpp  Images.cpp  Images.hpp  Sync.hpp
core/sep/graphics/pipeline/: Descriptor.cpp  Descriptor.hpp  PipelineCreation.cpp  PipelineCreation.hpp  Shaders.cpp  Shaders.hpp
core/sep/graphics/shaders/: Shaders.cpp  Shaders.hpp
core/sep/graphics/shaders/constants/: CullingPushConstants.hpp  MatrixPushConstants.hpp  PostprocessPushConstants.hpp  VertexPushConstants.hpp
core/sep/images/: Images.cpp  Images.hpp  Texture.hpp
core/sep/model/: ModelBus.h  ModelBus.hpp  ModelInstance.h  ModelInstance.hpp  ParsedModel.cpp  ParsedModel.h  ParsedModel.hpp  Texture.hpp  Vertex.h  instance.h  model.h
core/sep/model/bus/: ModelBus.cpp  ModelBus.hpp
core/sep/model/managing/: ModelEntityManager.cpp  ModelEntityManager.hpp  ModelGroup.h  ModelGroup.hpp  ModelRegion.h  PhysicsBus.cpp  PhysicsBus.h  PhysicsBus.hpp
core/sep/model/primitives/: Sphere.hpp
core/sep/system/: BufferManager.cpp  BufferManager.hpp  GraphicsManager.cpp  GraphicsManager.hpp  ModelEntityManager.cpp  ModelEntityManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp
core/sep/util/: Debug.hpp  Logger.hpp  Queue.hpp  Random.hpp  Tools.hpp  glmMath.h  stb_impl.cpp
core/sep/window/: Surface.hpp  Swapchain.cpp  Swapchain.hpp
core/shaders/: compile.sh  compute.comp  culling.comp  fragment.frag  matrices.comp  postprocess.vert  postprocessingFrag.frag  postprocessingVert.vert  shader.vert  vertex.vert
core/shaders/postprocessing/: blur.frag  default.frag  depth.frag  doom.frag  grid.frag  hdr.frag  hdr_fog.frag  hdr_fog2.frag  heartbeat.frag  inverted_scaling.frag  old.frag  retro.frag  swirl.frag  thermal.frag  vhs.frag  warping.frag
gamecore/: engine.hpp  logger.cpp  tools.hpp
gamecore/sep/: debug.hpp  physDevice.h
